# positrack

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac  notes
data/: 10-ieee1394.rules  Makefile.am  positrack.config
doc/: Makefile.am  positrack.texi
src/: Makefile.am  callback.c  comedi_code.c  firewire_camera_interface.c  gst.c  main.c  main.h  parallel_port.c  positrack.glade  positrackStartStop.c  positrack_shared_memory.c  read_shared_memory_example.cpp  stimulation.c  tracked_object.c  tracking.c
